@@ -3,3 +3,5 @@
 ## Toolchain
 
 - retro-unu now supports user defined code and test block delimiters
+- retro-muri now uses the updated retro-unu core
+- retro-muri now has separate passes for each step of the assembly process
